--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,23 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
 
-<%= yield %>
+	<nav class="navbar navbar-default navbar-fixed-top">
+	  <div class="container">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#">StatusUpdate</a>
+        <ul class="nav navbar-nav">
+          <li><%= link_to "All statuses", statuses_path %></li>
+        </ul>
+	    </div>
+	  </div>
+	</nav>
+
+	<div class="container">
+		<%= yield %>
+	</div>
 
 </body>
 </html>
