--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 	      <a class="navbar-brand" href="#">StatusUpdate</a>
         <ul class="nav navbar-nav">
           <li><%= link_to "All statuses", statuses_path %></li>
+          <li><%= link_to 'New Status', new_status_path %></li>
         </ul>
 	    </div>
 	  </div>
