--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -4,8 +4,8 @@
       <strong><%= status.name %></strong>
       <p><%= status.content %></p>
       <div class="meta">
-        <%= link_to time_ago_in_words(status.created_at) + " ago ", status %> |
-        <span class="admin">
+        <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
+        <span class="admin pull-right" >
           <%= link_to "Edit", edit_status_path(status) %> |
           <%= link_to "Delete", status, method: :delete, data: { confirm: 'Are you sure?' } %> 
         </span>
@@ -15,5 +15,3 @@
 
 
 <br>
-
-<%= link_to 'New Status', new_status_path %>
